--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,9 @@
 }
 
 .music-year {
-    display: flex;
+    display: none;
     cursor: pointer;
     margin-top: 0.8rem;
-    gap: 1rem;
 }
 
 .play a {
@@ -41,6 +40,7 @@
     border-radius: 50px;
     text-decoration: none;
     color: var(--color-gris);
+    margin-right: 1rem;
 }
 
 .stop a {
