--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     display: none;
 }
 
+.sect-secondsMins {
+    display: none;
+}
+
 .video-fondo {
     display: none;
  
@@ -44,8 +48,7 @@
     align-items: center;
     justify-content: center;
 
-    background-color: var(--color-gris);
-    border: 3px solid var(--background-color-azul);
+    background-color: var(--color-gris); 
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
@@ -61,15 +64,14 @@
 
     width: 3rem;
     height: 3rem;
-    background-color: var(--color-gris);
-    border: 3px solid var(--color-naranja-claro);
+    background-color: var(--color-gris);    
     border-radius: 100px;
     text-decoration: none;
     color: var(--color-gris);
 }
 
 .img-music {
-    width: 20px;
+    width: 18px;
 }
 
 .container-main {
@@ -122,8 +124,46 @@
     }
 }
 
-
 /* SECCION 2 */
+
+.content-sg-mn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.minutos-div, .segundos-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title-f-principal {
+    font-size: 2rem;
+    color: var(--color-azul-text);
+    margin-bottom: 2rem;
+}
+
+.title {
+    font-size: 1rem;
+    color: var(--color-gris);
+    font-weight: 200;
+}
+
+.minutes {
+    font-size: 3rem;
+    font-weight: 500;
+    color: var(--color-azul-text);
+}
+
+.seconds {
+    font-size: 3rem;
+    font-weight: 500;
+    color: var(--color-azul-text);
+}
+
+/* SECCION 3 */
 
 .happy-title {
     font-size: 5rem;
